[refs #74886] Fix footer spacing.

--- a/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
@@ -6755,3 +6755,8 @@ div.row {
   padding: 7px;
   margin-right: 10px;
 }
+
+footer ul.list-inline.land-list-separated {
+  position: relative;
+  top: -6px;
+}
